Some new demand

--- a/QuizBattle/src/main/resources/templates/base.html
+++ b/QuizBattle/src/main/resources/templates/base.html
@@ -33,7 +33,7 @@
 
 <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
-<script th:src="@{/js/script.js}"></script>
+<script th:src="@{/js/main.js}"></script>
 
 </body>
 </html>
