--- a/QuizBattle/src/main/resources/templates/dash.html
+++ b/QuizBattle/src/main/resources/templates/dash.html
@@ -8,12 +8,12 @@ th:replace="base::mainlayout(~{::section})">
 <body>
 
 <section>
-	<div class="row pl-2 pt-2">
+	<div class="row pl-2 pt-2" >
     <div class="col-lg-12 ">
       <div class="main__title">
         <img th:src="@{/image/hello.svg}" alt="Admin" />
         <div class="main__greeting">
-          <h1 th:text="${admin_name}">Hello,  </h1>
+          <h1 >Hello, <span th:text="${session.adminName}"></span></h1>
           <p>Welcome to your admin dashboard</p>
           <span id="MyClockDisplay" class="clock" onload="showTime()"></span>
         </div>
@@ -47,7 +47,7 @@ th:replace="base::mainlayout(~{::section})">
             <div class="counter-icon">
                 <i class="fa fa-object-group "></i>
             </div>
-            <span class="counter-value">7</span>
+            <span class="counter-value" th:text=${category_size}>0</span>
             <h3>Total-Category</h3>
         </div>
     </div>
@@ -57,7 +57,7 @@ th:replace="base::mainlayout(~{::section})">
             <div class="counter-icon">
                 <i class="fa fa-percent"></i>
             </div>
-            <span class="counter-value">7</span>
+            <span class="counter-value"></span>
             <h3>Total-Plan</h3>
         </div>
     </div>
@@ -133,7 +133,41 @@ th:replace="base::mainlayout(~{::section})">
     </div>
     </div>
   </div>
+  
+  
+  <script type="text/javascript">
+  function showTime(){
+	    var date = new Date();
+	    var h = date.getHours(); // 0 - 23
+	    var m = date.getMinutes(); // 0 - 59
+	    var s = date.getSeconds(); // 0 - 59
+	    var session = "AM";
+	    
+	    if(h == 0){
+	        h = 12;
+	    }
+	    
+	    if(h > 12){
+	        h = h - 12;
+	        session = "PM";
+	    }
+	    
+	    h = (h < 10) ? "0" + h : h;
+	    m = (m < 10) ? "0" + m : m;
+	    s = (s < 10) ? "0" + s : s;
+	    
+	    var time = h + ":" + m + ":" + s + " " + session;
+	    document.getElementById("MyClockDisplay").innerText = time;
+	    document.getElementById("MyClockDisplay").textContent = time;
+	    
+	    setTimeout(showTime, 1000);
+	    
+	}
+
+	showTime();
+  </script>
 </section>
+
 
 </body>
 </html>
