--- a/QuizBattle/src/main/resources/templates/layout/components.html
+++ b/QuizBattle/src/main/resources/templates/layout/components.html
@@ -21,7 +21,8 @@
 	   
 	      <a class="navbar-brand" href="#">Quiz Maffia</a>
 	       <button class="navbar-toggler" 
-	        type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+	        type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+	        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
 	        >
 	        <span class="navbar-toggler-icon" ></span>
 	      </button>
@@ -31,7 +32,7 @@
 	        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 	          <li class="nav-item">
 	            <a class="nav-link active text-white btn btn-sm btn-danger px-2 py-1" 
-	              href="#" th:href="@{/Logout}">Logout</a>
+	              href="#" th:href="@{/Logout}"><i class="fa fa-sign-out "></i> Logout</a>
 	          </li>
 	        </ul>
 	      </div>
@@ -51,6 +52,7 @@
 	
 	<!-- sidebar -->
     	<div class="vertical-nav bg-white" id="sidebar" th:fragment="sidebar">
+    		
 		  <div class="py-2 px-3  bg-light">
 		    <div class="media d-flex align-items-center">
 		      <img loading="lazy" th:src="@{/image/user.png}" alt="Admin" width="80" height="80" class="mr-3 rounded-circle img-thumbnail shadow-sm">
@@ -66,7 +68,7 @@
 		
 		    <ul class="nav flex-column bg-white mb-0">
 		      <li class="nav-item">
-		        <a href="#" class="nav-link active">
+		        <a href="#" th:href="@{/Admin/Dash/}" class="nav-link active">
 		          <i class="fa fa-th-large fa-fw"></i>
 		            home
 		         </a>
@@ -76,14 +78,27 @@
 		        <a href="#category_sub_menu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link text-dark">
 		        <i class="fa fa-object-group mr-3 text-primary fa-fw"></i> Category</a>
 		        <ul class="collapse list-unstyled" id="category_sub_menu">
-		            <a href="#">
+		            <a href="#" th:href="@{/Admin/Category/Manage}">
 		              <li>
-		                <i class="fa fa-angle-double-right"></i>Add Category
+		                <i class="fa fa-angle-double-right"></i>Manage Category
 		              </li>
 		            </a>
-		            <a href="#">
-		              <li >
-		                <i class="fa fa-angle-double-right"></i>Manage Category
+		            
+		            <a href="#" th:href="@{/Admin/Category/ActiveList}">
+		              <li>
+		                <i class="fa fa-angle-double-right"></i>isActive
+		              </li>
+		            </a>
+		            
+		            <a href="#" th:href="@{/Admin/Category/DeActiveList}">
+		              <li>
+		                <i class="fa fa-angle-double-right"></i>isDeActive
+		              </li>
+		            </a>
+		            
+		            <a href="#" th:href="@{/Admin/Category/isDeleteList}">
+		              <li>
+		                <i class="fa fa-angle-double-right"></i>isDelete
 		              </li>
 		            </a>
 		        </ul>
@@ -91,11 +106,11 @@
 		      
 		       <li class="nav-item ">
 		        <a href="#quiz_sub_menu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link text-dark">
-		        <i class="fa fa-book mr-3 text-primary fa-fw"></i> Quiz</a>
+		        <i class="fa fa-book mr-3 text-primary fa-fw"></i> Contest</a>
 		        <ul class="collapse list-unstyled" id="quiz_sub_menu">
-		            <a href="#">
+		            <a href="#" th:href="@{/Admin/Contest/Manage}">
 		              <li>
-		                <i class="fa fa-angle-double-right"></i>Add Category
+		                <i class="fa fa-angle-double-right"></i>Manage
 		              </li>
 		            </a>
 		            <a href="#">
