--- a/QuizBattle/src/main/resources/templates/contest_page/contest_is_active.html
+++ b/QuizBattle/src/main/resources/templates/contest_page/contest_is_active.html
@@ -8,118 +8,98 @@ th:replace="/base::mainlayout(~{::section})">
 <body >
 
 <section>
+<style>
+.richText-btn .fa-video-camera ,.richText-help 
+{
+	display: none!important;
+	visibility: hidden!important;
+}
+.richText .richText-toolbar ul li a .richText-dropdown-outer 
+{
+    z-index: 999!important;
+}
+</style>
  
-		<div class="row p-2" >
-        	
-        	<div class="col-lg-12">
-        		<div class="card  p-0 border-info" >
-        		<h5 class="card-header text-white bg-info">Add New Contest Details</h5>
-				  <div class="card-body p-2">
-				    <form th:action="@{Save}" 
-				    		method="post" 
-				    		th:object="${contestBean}" 
-				    		class="row">
-		        		<div class="col-lg-3">
-							  <div class="form-group row">
-							    <label for="staticEmail" class="col-sm-3 col-form-label">Name</label>
-							    <div class="col-sm-9">
-							      <input type="text"  class="form-control" th:field="*{name}"  required="required">
-							    </div>
-							  </div>
-						 </div>
-						 
-						<div class="col-lg-3">
-							  <div class="form-group row">
-							    <label for="staticEmail" class="col-sm-3 col-form-label">Date Time</label>
-							    <div class="col-sm-9">
-							      <input class="form-control" type="datetime-local" 
-							      th:field="*{startDateTime}" 
-							      id="startDateTime"
-							      min="2017-06-01T08:30" max="2022-06-30T16:30">
-							    </div>
-							  </div>
-						 </div> 
-						 
-						 <div class="col-lg-3">
-						 	<div class="form-group row">
-							    <label for="staticEmail" class="col-sm-3 col-form-label">Status</label>
-							    <div class="col-sm-9">
-							     <select class="form-control" th:field="*{isactive}">
-							      	<option value="No">De-Active</option>
-							      	<option value="Yes">Active</option>
-							      </select>
-							    </div>
-							  </div>
-						</div>
-						<div class="col-lg-3">
-							<div class="form-group row">
-							    <div class="col-sm-9 col-md-offset-3">
-							      <button type="submit" class="btn btn-primary btn-block">Save</button> 
-							    </div>
-							</div>
-						</div>
-					</form>
-				  </div>
-				</div>
-        	
-	        	
-	        </div>
-        
-        </div>
+
         
 		<div class="row p-2">
 		    <div class="col-lg-12">
 		      <div class="card p-0 border-info">
 		      <h5 class="card-header text-white bg-info">Contest Data List
 		      </h5>
-		      <div class="card-body p-0">
-		        <table class="table table-sm table-bordered border-primary m-0" id="tabledata">
+		      <div class="card-body p-2">
+		        <table class="table table-sm table-bordered m-0"  style="width:100%" id="tabledata">
 		        	
-		          <thead class="table-secondary">
+		          <thead class="bg-warning">
 		            <tr>
 		              <th>sl</th>
 		              <th>Name</th>
-		              <th style="min-width: 90px;">Status</th>
-		              <th>Add By</th>
-		              <th>Add Date</th>
-		              <th>Contest Date</th>
-		              <th>Action</th>
+		              <th  style="min-width: 160px;">Question</th>
+		              <th style="min-width: 90px;">Options 1</th>
+		              <th style="min-width: 90px;">Options 2</th>
+		              <th style="min-width: 90px;">Options 3</th>
+		              <th style="min-width: 90px;">Options 4</th>
+		              <th >Answer</th>
+		               <th style="min-width: 90px;">Quiz Time</th>
+		               <th style="min-width: 90px;">Total Time</th>
+		               
+		               <th style="min-width: 100px;">Pool Size</th>
+		               <th style="min-width: 100px;">Pool Price</th>
+		               <th style="min-width: 100px;">Entry Fees</th>
+		               <th style="min-width: 70px;">Rank</th>
+		               
+		               <th style="min-width: 120px;">Contest Date</th>
+		               
+		              <th style="min-width: 90px;">Add By</th>
+		              <th style="min-width: 120px;">Contest Status</th>
+		              
+		               <th style="min-width: 120px;">Status</th>
+		              
+	
+		              
+		              
+		              <th style="min-width: 120px;">Action</th>
 		            </tr>
 		          </thead>
 		          <tbody>
-		          	<tr th:if="${list_obj.empty}">
-			            <td colspan="5" class="text-center"> No Category Available </td>
-			        </tr>
+		          	
 			        
 			        <tr th:each="obj : ${list_obj}">
 			            <th th:text="${obj.id}"> ID </th>
 			            <td th:text="${obj.name}"> Name</td>
-			            <td th:text="${obj.isactive=='Yes'} ? 'Active' : 'De-Active'"  > Name</td> 
-			            <!-- <td th:text="${obj.isactive}" > Name</td> -->
-			            <td th:text="${obj.add_by_model.name}"> Name</td>
-			            <td th:text="${#dates.format(obj.createdAt, 'dd-MMM-yyyy HH:mm:ss a')}"> Name</td>
-			            <td th:text="${#temporals.format(obj.startDateTime, 'dd-MM-yyyy hh:mm:ss a')}"> Name</td>
-			            <td>
+			            <td th:utext="${obj.question}"> Question</td>
+			            <td  th:text="${obj.option1}">Option 1</td> 
+			            <td  th:text="${obj.option2}">Option 2</td> 
+			            <td  th:text="${obj.option3}">Option 3</td> 
+			            <td  th:text="${obj.option4}">Option 4</td> 
+			            <td  th:text="${obj.answer}">Answer</td> 
 			            
-			            	<a class="text-white btn btn-sm btn-success px-2 py-1" 
-	              				href="#" th:href="@{Active(thisid=${obj.id})}"
-	              				th:classappend="${obj.isactive=='Yes'} ? disabled : demo"
-	              				 title="Active"><i class="fa fa-check"></i></a>	
+			            <td  th:text="${obj.quiztime+' Seconds'}">Quiz Time</td> 
+			            <td  th:text="${obj.totaltime+' Minutes'}">Quiz Time</td> 
+			            
+			            <td  th:text="${obj.plan_model.poolSize}">poolSize</td> 
+			            <td  th:text="${obj.plan_model.poolPrice}">poolPrice</td> 
+			            <td  th:text="${obj.plan_model.entryFee}">entry_fees</td> 
+			            
+			            <td th:utext="${#strings.replace(obj.plan_model.extra,'#','<br>')}"> Rank</td>
+			            
+			            <td th:text="${#temporals.format(obj.startDateTime, 'dd-MM-yyyy hh:mm:ss a')}"> Name</td>
+			            
+			            <td th:text="${obj.add_by_model.name}"> admin Name</td>
+			            <td th:text="${obj.contestStatus}"> Contest Status</td>
+			            
+			             <td th:text="${obj.isactive}">Status</td>
+			            
+			            
+			            <!-- <td th:text="${#dates.format(obj.createdAt, 'dd-MMM-yyyy HH:mm:ss a')}"> Name</td> -->
+			           
+			            <td>
 	              				
 	              			<a class="text-white btn btn-sm btn-warning px-2 py-1" 
-	              				href="#" th:href="@{DeActive(thisid=${obj.id})}"
+	              				href="#" th:href="@{DeActive1(thisid=${obj.id})}"
 	              				th:classappend="${obj.isactive=='No'} ? Active : demo"
-	              				 title="De-Active"><i class="fa fa-close"></i></a>
-	              				
-	              			<a class="text-white btn btn-sm btn-info px-2 py-1" 
-	              				href="#"
-	              				 title="Edit"
-	              				 th:attr="onclick='editContestFunction(\'' + ${obj.name}+  '\',\'' + ${obj.startDateTime}+  '\',\'' + ${obj.isactive}+  '\',\'' + ${obj.id}+  '\');'"
-	              				 ><i class="fa fa-pencil"></i></a>
-	              					
-			            	<a class="text-white btn btn-sm btn-danger px-2 py-1" 
-	              				href="#" th:href="@{Remove(thisid=${obj.id})}"><i class="fa fa-trash"></i></a>
-	              				
+	              				 title="De-Active"><i class="fa fa-close"></i></a> 
+	              			
 			            </td>
 			        </tr>
 		            <!-- <tr>
@@ -140,88 +120,28 @@ th:replace="/base::mainlayout(~{::section})">
 		  
 		  
 
-<!-- Modal -->
-<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Update Category Record</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-       	<form th:action="@{Update}" method="post" th:object="${contestBean}" class="">
-       		
-  
-		  <div class="form-group row">
-		    <label for="staticEmail" class="col-sm-3 col-form-label">Name</label>
-		    <div class="col-sm-9">
-		      <input type="text"  class="form-control" id="contestName" th:field="*{name}" 
-		      required="required">
-		    </div>
-		  </div>
-	
-		<div class="form-group row">
-		    <label for="staticEmail" class="col-sm-3 col-form-label">Date Time</label>
-		    <div class="col-sm-9">
-		      <input class="form-control" type="datetime-local" 
-		      th:field="*{startDateTime}" 
-		      id="startDateTime1"
-		      min="2017-06-01T08:30" max="2022-06-30T16:30">
-		    </div>
-		  </div>
-	 		<div class="form-group row">
-		    <label for="staticEmail" class="col-sm-3 col-form-label">Status</label>
-		    <div class="col-sm-9">
-		     <select class="form-control" th:field="*{isactive}" id="contestStatus">
-		      	<option value="No">De-Active</option>
-		      	<option value="Yes">Active</option>
-		      </select>
-		    </div>
-		  </div>
-		  
-		  <input type="hidden" id="contestId" th:field="*{id}">
-	
-		<div class="form-group row">
-		    <div class="col-md-9 offset-md-3">
-		      <button type="submit" class="btn btn-primary btn-block">Save</button> 
-		    </div>
-		</div>
-			
-		</form>
-      </div>
-    </div>
-  </div>
-</div>
 
  
- 
- 
- 
- 
- <script type="text/javascript">
 
- function mindate()
- {
-
-	 
-	 elem1 = document.getElementById("startDateTime1") ;
- elem = document.getElementById("startDateTime");
- var iso = new Date().toISOString();
- var minDate = iso.substring(0,16);
- elem.value = minDate
- elem.min = minDate
  
- elem1.value = minDate
- elem1.min = minDate
- }
- mindate();
- </script>
+
+
+
+	<script>
+      
+        
+        $(document).ready(function() {
+            $('#tabledata').DataTable({
+            	scrollY:        '55vh',
+            	"scrollX": true,
+                scrollCollapse: true,
+                paging:         true
+            });
+            
+        } );
+    </script>	
+    
 </section>
-
-
-
 
 </body>
 </html>
