--- a/QuizBattle/src/main/resources/templates/contest_page/manage.html
+++ b/QuizBattle/src/main/resources/templates/contest_page/manage.html
@@ -62,6 +62,7 @@ th:replace="/base::mainlayout(~{::section})">
 		            </tr>
 		          </thead>
 		          <tbody>
+		          
 			        <tr th:each="obj : ${list_obj}">
 			            <th th:text="${obj.id}"> ID </th>
 			            <td th:text="${obj.name}"> Name</td>
@@ -93,17 +94,34 @@ th:replace="/base::mainlayout(~{::section})">
 			           
 			            <td>
 			            
-	              			<a class="text-white btn btn-sm btn-warning px-2 py-1" 
-	              				href="#" th:href="@{Restore(thisid=${obj.id})}"
-	              				 title="Restore"
-	              				 onclick="if(!(confirm('Are you sure'))) return false"><i class="fa fa-upload"></i></a>	
+			            	<a class="text-white btn btn-sm btn-success px-2 py-1" 
+	              				href="#" th:href="@{Active(thisid=${obj.id})}"
+	              				th:classappend="${obj.isactive=='Yes'} ? disabled : demo"
+	              				 title="Active"><i class="fa fa-check"></i></a>	
 	              				
+	              			<a class="text-white btn btn-sm btn-warning px-2 py-1" 
+	              				href="#" th:href="@{DeActive(thisid=${obj.id})}"
+	              				th:classappend="${obj.isactive=='No'} ? Active : demo"
+	              				 title="De-Active"><i class="fa fa-close"></i></a> 
+	              				
+	              			<!-- <a class="text-white btn btn-sm btn-info px-2 py-1" 
+	              				href="#"
+	              				 title="Edit"
+	              				 th:attr="onclick='editContestFunction(\'' + ${obj.name}+  '\',\'' + ${obj.startDateTime}+  '\',\'' + ${obj.isactive}+  '\',\'' + ${obj.id}+  '\');'"
+	              				 ><i class="fa fa-pencil"></i></a>
+	              					 -->
 			            	<a class="text-white btn btn-sm btn-danger px-2 py-1" 
-	              				href="#" th:href="@{Delete(thisid=${obj.id})}"
-	              				onclick="if(!(confirm('Are you sure, it will delete Permanently'))) return false"
-	              				title="Permanently Delete"><i class="fa fa-trash"></i></a>
+	              				href="#" th:href="@{Remove(thisid=${obj.id})}"><i class="fa fa-trash"></i></a>
+	              				
 			            </td>
 			        </tr>
+		            <!-- <tr>
+		              <th scope="row">1</th>
+		              <td>Mark</td>
+		              <td>Otto</td>
+		              <td>@mdo</td>
+		              <td>@mdo</td>
+		            </tr> -->
 		            
 		          </tbody>
 		        </table>
