--- a/QuizBattle/src/main/resources/templates/contest_page/rules.html
+++ b/QuizBattle/src/main/resources/templates/contest_page/rules.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"  
-th:replace="/base::mainlayout(~{::section})">
+th:replace="./base::mainlayout(~{::section})">
 <head>
 
 <meta charset=UTF-8>
