--- a/QuizBattle/src/main/resources/templates/layout/components.html
+++ b/QuizBattle/src/main/resources/templates/layout/components.html
@@ -184,6 +184,13 @@
 		            </a>
 		        </ul>
 		      </li>
+		      
+		      <li class="nav-item">
+		        <a href="#" th:href="@{/Admin/Slide/Manage}"class="nav-link">
+		            <i class="fa fa-camera"></i>
+		            Slide Image
+		        </a>
+		      </li>
 		    </ul>
 		
 		    <p class="text-gray font-weight-bold text-uppercase px-3 small py-4 mb-0">User</p>
